# pygim

./: .code-env  .gitignore  .gitignore copy  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  __version__.py  itory import acquire_repo  pyproject.toml  pytest.ini  setup.py
.github/: copilot-instructions.md
.github/agents/: cpp-coder.agent.md  cpp-reviewer.agent.md  design-reviewer.agent.md  designer.agent.md  docs-reviewer.agent.md  perf-reviewer.agent.md  planner.agent.md  python-coder.agent.md  python-reviewer.agent.md  solid-ddd-reviewer.agent.md  tester.agent.md
.github/workflows/: auto-tag.yml  publish.yml  python-packages.yml
_pygim_build/: build_backend.py
archive/pygim/: __init__.py
benchmarks/: bcp_throughput.py  persistence_adapter_throughput.py  repository_adapter_throughput.py  timeseries_insert_experiment.py  timeseries_parallel_experiment.py  timeseries_sweep.py
debug/: fuc.py
docs/design/: README.md  agent_framework_architecture.md  agent_framework_broadcast_sequence.puml  agent_framework_class_diagram.puml  agent_framework_directed_sequence.puml  agent_framework_layered_architecture.puml  agent_framework_mediator_class_diagram.puml  agent_framework_runtime_diagram.puml  agent_framework_tool_sequence.puml  agent_framework_variation_diagram.puml  arrow_bcp_final_status.md  arrow_bcp_implementation.md  arrow_bcp_refactor.md  arrow_bcp_sequence.md  arrow_bcp_status.md  bcp_bottleneck_analysis.md  bcp_performance_analysis.md  core_adapter_bindings_convention.puml  factory_current_class_diagram.puml  factory_current_sequence_diagram.puml  factory_target_class_diagram.puml  factory_target_sequence_diagram.puml  mssql_bcp_detailed_analysis.md  mssql_bcp_detailed_analysis_v2.md  persistence_abstract_architecture.puml  persistence_architecture.md  persistence_class_diagram.puml  persistence_load_sequence.puml  persistence_save_sequence.puml  repository-seq-diagram.puml  (+20 more)
playground/: _openai.py
pygim-common/: README.rst  pyproject.toml  setup.py
pygim-common/_pygim/: _error_msgs.py  _exceptions.py  _iterlib.py  _static.py  common_fast.cpp
pygim-common/_pygim/_common_fast/: id.h  url.cpp  url.h
pygim-common/_pygim/_fast/: encoded_consts.h  timestamp.h
pygim-common/_pygim/_gimmicks_fast/: id.h  random.h
pygim-common/_pygim/_iterlib_fast/: flatten.cpp  flatten.h  iterutils.h  string_list.h
pygim-common/_pygim/_kernel/: _factory.py  _factory_ref.py
pygim-common/_pygim/_magic/: __init__.py  _cached_type.py  _dispatcher.py  _entangled.py  _gim_object.py  _gim_property.py  _gimmick.py  _patch.py  _routine.py  _traits.py  cached_type.pyi  gim_object.py  support.pyi
pygim-common/_pygim/_primitives_fast/: id.h
pygim-common/_pygim/_support/: __init__.py  _case_builder.py
pygim-common/_pygim/_utils/: __init__.py  _checking.py  _complaints.py  _field_explorer.py  _fileutils.py  _inspect.py  _iterable.py
pygim-common/_pygim/_utils/_iterable/: _iterable.py  iterable_fast.cpp
pygim-common/_pygim/_utils_fast/: attributes.h
pygim-common/pygim/: __init__.py  __main__.py  __version__.py  checklib.py  checklib.pyi  exceptions.py  exceptions.pyi  explib.py  invariant.py  iterlib.py  iterlib.pyi  typing.py
pygim-common/pygim/_cli/: __init__.py  cliapp.py  cliapp.pyi  support.py
pygim-common/pygim/cli/: __init__.py  cliapp.py
pygim-common/pygim/fileio/: __init__.py  fileops.py  fileops.pyi  pathset.py
pygim-common/pygim/gimmicks/: __init__.py  _abc_copy.py  abc.py  entangled.pyi
pygim-common/pygim/iterables/: __init__.py  flatten.py
pygim-common/pygim/kernel/: __init__.py  entangled_class.py  pathset.py  pathset.pyi  string_list.py
pygim-common/pygim/kernel/magic/: __init__.py  cached_type.py  cached_type.pyi  decorator.py  each.py  entangled_class.py  entangled_class.pyi  gim_object.py  patch.py  support.py  support.pyi  traits.py  type_descriptor.py
pygim-common/pygim/kernel/primitives/: gimmick.py
pygim-common/pygim/magic/: composite_pattern.py  gim_obj.py  patch.py  utils.py
pygim-common/pygim/patterns/: factory.py
pygim-common/pygim/performance/: __init__.py  dispatch.py  timing_and_profiling.pyi
pygim-common/pygim/primitives/: __init__.py  callable_list.py  gimdict.py  gimerror.py  pathset.py  range_selector.py  range_selector.pyi  string_list.py  timestamp.py
pygim-common/pygim/security/: __init__.py  shasum.py
pygim-common/pygim/testing/: __init__.py  diff.py  testing.py  testing.pyi
pygim-common/pygim/utils/: __init__.py  attributes.py  fast_iterable.cpp  flatten.cpp  flatten.h  formatting.py  iterable.cpp  iterable.py  iterable.pyi  iterable.pyx  iterutils.h  misc.py  performance.py  persistence.py  persistence.pyi  security.py  str_converters.py  str_tools.py  testing.py  testing.pyi
pygim-common/tests/: conftest.py  test_canary.py  test_decorator.py  test_each.py  test_flatten.py  test_gimmick.py  test_gimmick_abc.py  test_iterutils.py  test_pathset.py  test_utils.py
pygim-common/tests/examples/: conftest.py  test_examples.py
pygim-common/tests/unit_tests/: conftest.py  test_cached_type.py  test_dispatch.py  test_dispatcher.py  test_entangled_class.py  test_fileutils.py  test_flatten.py  test_gimmick_abc.py  test_iterable.py  test_iterlib.py  test_iterutils.py  test_multicall.py  test_pathset.py  test_range_selector.py  test_routine.py  test_security.py  test_sha256sum.py  test_singletons.py  test_string_converters.py  test_stringlist.py  test_url.py  test_utils.py
pygim-common/tests/unit_tests/gimmicks/: test_id.py
pygim-common/tests/unit_tests/magic/: test_class_magic.py  test_gim_object.py  test_gim_property.py  test_patch.py  test_patch_py38_plus.py
pygim-common/tests/unit_tests/primitives/: test_id.py
pygim-db/: pyproject.toml
pygim-ddd/: pyproject.toml
pygim-ddd/docs/: interfaces.puml
pygim-ddd/pygim/ddd/: __init__.py  interfaces.py
pygim-ddd/tests/: test_canary.py
pygim-di/: pyproject.toml
pygim-patterns/: pyproject.toml
pygim-primitives/: pyproject.toml
pygim-serialization/: pyproject.toml
pygim-traits/: pyproject.toml
scripts/: playground.py
tests/: conftest.py
(+383 files in other folders)
