[build-system]
requires = ["setuptools ~= 58.0", "wheel", "toml"]
build-backend = "build_backend"
backend-path = ["_pygim_build"]

[project]
name = "python-gimmicks"
version = "0.2.3"
description = "Full Python Gimmicks project with all of its sub-projects."
readme = "README.rst"
requires-python = ">=3.8, <4.0"
authors = [
  {email = "debith-dev@outlook.com"},
  {name = "Teppo Perä"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]
dependencies = [
  "pygim-common @ file:///${PROJECT_ROOT}/pygim-common",
  "pygim-ddd @ file:///${PROJECT_ROOT}/pygim-ddd",
]

[project.urls]
homepage = "https://github.com/Debith/pygim"
documentation = "https://readthedocs.org/projects/pygim/"
source = "https://github.com/Debith/pygim"
download = "https://pypi.org/project/python-gimmicks/#files"
tracker = "https://github.com/Debith/pygim/issues"


[project.optional-dependencies]
dev = [
  'pytest',
  'pytest-xdist',
  'mypy',
  'coverage',
  'coverage[toml]',
]

test = [
  'pandas',
  'numpy',
]

[project.scripts]
pygim = "_pygim._cli.__main__:cli"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "test_*.py"
addopts = '-ra -q --doctest-glob="**/*.py" --tb=short --doctest-modules --doctest-continue-on-failure'
testpaths = [
    "pygim-common/pygim",       # doctests
    "pygim-common/tests",
    "pygim-ddd/tests",
]

[tool.coverage.report]
omit = ["./docs/**/*.*", "**/tests/**/*.*"]
include = ["./pygim-common/**/*.py",
           "./pygim-ddd/**/*.py",
           ]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if False",
    "if __name__ == .__main__.:",
    "@abc.abstractmethod",
    "@abc.abstractproperty",
]

[tool.pygim.commands]
lint = "mypy ."
test = "pytest"

[tool.pdm.build]
includes = [
    "pygim-cli",
]

[tool.mypy]
exclude = [
    'tests/.*',
    'build/.*',
]