[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"
backend-path = []

[project]
name = "python-gimmicks"
version = "0.2.3"
description = "Full Python Gimmicks project with all of its sub-projects."
readme = "README.rst"
requires-python = ">=3.8, <4.0"
authors = [
  {email = "debith-dev@outlook.com"},
  {name = "Teppo Perä"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
homepage = "https://github.com/Debith/pygim"
documentation = "https://readthedocs.org/projects/pygim/"
source = "https://github.com/Debith/pygim"
download = "https://pypi.org/project/python-gimmicks/#files"
tracker = "https://github.com/Debith/pygim/issues"


[project.optional-dependencies]
dev = [
  'pytest',
  'pytest-xdist',
  'mypy',
  'coverage',
  'coverage[toml]',
  'pybind11',
]

test = [
  'pandas',
  'numpy',
]

[project.scripts]
pygim = "pygim.__main__:cli"
oo = "pygim.__main__:cli_oo"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "test_*.py"
addopts = '-ra -q --doctest-glob="**/*.py" --tb=short --doctest-modules --doctest-continue-on-failure'
testpaths = [
    "pygim-common/pygim",       # doctests
    "pygim-common/tests",
    "pygim-ddd/tests",
]

[tool.coverage.report]
omit = ["./docs/**/*.*", "**/tests/**/*.*"]
include = ["./src/**/*.py"
           ]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if False",
    "if __name__ == .__main__.:",
    "@abc.abstractmethod",
    "@abc.abstractproperty",
]

[tool.pygim.commands]

[tool.mypy]
exclude = [
    'tests/.*',
    'build/.*',
]