[build-system]
requires = ["setuptools ~= 58.0", "wheel", "pdm-backend", "pybind11", "toml", "psutil"]

[project]
name = "pygim-common"
version = "0.6.1"
description = "Common features for pygim"
readme = "README.rst"
requires-python = ">=3.7, <4"
authors = [
  {email = "debith-dev@outlook.com"},
  {name = "Teppo Perä"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]
dependencies = [
  'click>=8.1.3',
  'loguru>=0.6.0',
  'coverage>=6.4.4',
  'pytest>=7.0.0',
  'typing_extensions>=4.2.0',
  'tabulate>=0.8.10'
]

[project.optional-dependencies]
dev = [
  'pytest',
  'pytest-xdist',
  'mypy',
  'coverage',
  'coverage[toml]',
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = '-ra -q --tb=short --doctest-glob="**/*.py" --doctest-modules --doctest-continue-on-failure'
testpaths = [
    "pygim",
    "tests",
]

[tool.coverage.report]
omit = ["./docs/**/*.*", "**/tests/**/*.*"]
include = ["./**/*.py"]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if False",
    "if __name__ == .__main__.:",
    "@abc.abstractmethod",
    "@abc.abstractproperty",
]

[tool.pygim-common.commands]
lint = "mypy ."
test = "pytest"

[tool.mypy]
strict = true
no_implicit_optional = true
check_untyped_defs = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = false
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
exclude = [
    'tests/.*',
    'build/.*',
]

[tool.distutils.bdist_wheel]
universal = true