[project]
name = "pygim-ddd"
version = "0.0.1"
description = "Domain-Driven Design toolkit"
readme = "README.rst"
requires-python = ">=3.7, <4"
authors = [
  {email = "debith-dev@outlook.com"},
  {name = "Teppo Perä"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]

dependencies = [
  "pygim-common",
]

[project.optional-dependencies]
dev = [

]

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "test_*.py"
addopts = '-ra -q --doctest-glob="**/*.py" --doctest-modules --doctest-continue-on-failure'
testpaths = [
    "tests"
]

[tool.coverage.paths]
source = [

]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if False",
    "if __name__ == .__main__.:",
    "@abc.abstractmethod",
    "@abc.abstractproperty",
]

[tool.mypy]
strict = true
no_implicit_optional = true
check_untyped_defs = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = false
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
exclude = [
    'tests/.*',
]
